test/should-fail/autorelease-w-no-enclosing-pool/exe-main.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

int-t main()
{
  object-t o = make(object::klass);
  $autorelease(o);
  return 0;
}
